kube/hub-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hub-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jupyterhub
        service: jupyterhub
    spec:
      volumes:
      - name: config
        configMap:
          name: hub-config
      - name: secret
        secret:
          secretName: hub-secret
      - name: hub-db-dir
        persistentVolumeClaim:
          claimName: hub-db-dir
      serviceAccountName: jupyterhub
      containers:
 
      - name: hub-container
        image: jupyterhub/k8s-hub:v0.4
        volumeMounts:
        - mountPath: /srv/jupyterhub/config/
          name: config
        - mountPath: /srv/jupyterhub/secret/
          name: secret
        - mountPath: /srv/jupyterhub/
          name: hub-db-dir
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081

      - name: proxy-container
        image: jupyterhub/configurable-http-proxy:2.0.4
        command:
        - configurable-http-proxy
        - --ip=0.0.0.0
        - --api-ip=0.0.0.0
        - --default-target=http://127.0.0.1:8081
        - --error-target=http://127.0.0.1:8081/hub/error
        - --log-level=debug
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
            name: proxy-public
          - containerPort: 8001
            name: api
