kube/proxy-deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jupyter-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter-proxy
    spec:
      containers:
      - name: proxy-container
        image: jupyterhub/configurable-http-proxy:2.0.4
        command:
        - configurable-http-proxy
        - --ip=0.0.0.0
        - --port=8000
        - --api-ip=0.0.0.0
        - --api-port=8001
        - --default-target=http://127.0.0.1:8081
        - --error-target=http://127.0.0.1:8081/hub/error
        - --log-level=debug
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
            name: proxy-public
          - containerPort: 8001
            name: api
