kube/hub-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
spec:
  selector:
    name: jupyterhub
  ports:
    - name: https
      port: 8000
