kube/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-api
spec:
  selector:
    name: jupyterhub
  ports:
    - name: https
      port: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
spec:
  selector:
    name: jupyterhub
  ports:
    - name: https
      port: 8000
