kube/proxy-service.yaml
piVersion: v1
kind: Service
metadata:
  name: proxy-api
spec:
  selector:
    name: proxy-pod
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
spec:
  type: LoadBalancer
  selector:
    name: proxy-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
