kube/hub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  tls:
  - hosts:
    - jupyterhub.testing.acp.homeoffice.gov.uk
    secretName: jupyterhub-tls
  rules:
  - host: jupyterhub.testing.acp.homeoffice.gov.uk
    http:
      paths:
        - path: /
          backend:
            serviceName: proxy-public
            servicePort: 8000
        - path: /api
          backend:
            serviceName: proxy-api
            servicePort: 8001
