kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    ingress.kubernetes.io/proxy-body-size: 64m
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: proxy-public
              servicePort: 80
      host: jupyterhub.testing.acp.homeoffice.gov.uk
